# owm

./: .gitignore  .graphifyignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DASHBOARD-FRAMING.md  IMPLEMENTATION-NOTES.md  INCOMING.md  REGRESSION_RISKS.md  STRETCH.md  main.py  pyproject.toml  spec.md
dashboard/: UI-PROPOSAL.md  __main__.py  app.js  dev_server.py  fixture_server.py  fixtures.py  index.html  server.py  style.css
docs/: architecture-notes.md  getting-started.md  setup.md
memory/: MEMORY.md  harness-stub-bug.md  project-rename.md  project-separate-repo.md
scripts/: seed-ws.sh  seed_ws.py
src/owm/: addons.py  adoption.py  api.py  archive.py  audit_log.py  cli.py  config.py  database.py  env.py  errors.py  instance.py  log_rotation.py  mcp.py  modules.py  operations.py  oplog.py  ports.py  proxy.py  scripts.py  session_context.py  sync.py  venv.py  workspace.py  worktrees.py
test_fixtures/: README.md
test_fixtures/lightweight-repos/odoo_like/odoo/addons/web/: __manifest__.py
test_fixtures/lightweight-repos/scripts_repo/scripts/: run.py
test_fixtures/repos/customer_config/addons/test_customer_addon/: __manifest__.py
test_fixtures/repos/multi_path_repo/primary_addons/addon_p/: __manifest__.py
test_fixtures/repos/multi_path_repo/secondary_addons/addon_s/: __manifest__.py
test_fixtures/repos/odoo_like/addons/base/: __manifest__.py
test_fixtures/repos/product_core/addons/test_sale_ext/: __manifest__.py
test_fixtures/repos/scripts_repo/scripts/: run.py
test_fixtures/runnable-repos/: smoke_inherit.py
test_fixtures/runnable-repos/product-core/product_base/: __manifest__.py
test_fixtures/runnable-repos/product-core/product_base/models/: probe.py
test_fixtures/runnable-repos/product-core/product_base/security/: ir.model.access.csv
test_fixtures/runnable-repos/product-core/product_base/views/: probe_views.xml
test_fixtures/runnable-repos/product-ext/product_ext/: __manifest__.py
test_fixtures/runnable-repos/product-ext/product_ext/models/: __init__.py  probe_ext.py
test_fixtures/runnable-repos/product-ext/product_ext/views/: probe_ext_views.xml
test_fixtures/workspace/: workspace.toml
test_fixtures/workspace/instances/dev/: instance.toml  state.json
test_fixtures/workspace/instances/feat-789/: instance.toml
test_fixtures/workspace/instances/staging/: instance.toml
tests/: conftest.py  test_addons_resolution.py  test_adoption.py  test_architecture.py  test_archive.py  test_audit_log.py  test_cli_commands.py  test_cli_integration.py  test_config_schemas.py  test_dashboard_endpoints.py  test_database_lifecycle.py  test_diff_check_modules.py  test_env_path_parity.py  test_error_taxonomy.py  test_fetch_sync.py  test_install_orchestration.py  test_instance_lifecycle_create.py  test_instance_lifecycle_start_stop.py  test_mcp_surface.py  test_module_install.py  test_owm_env.py  test_port_assignment.py  test_process_scan.py  test_proxy.py  test_resolve_workspace_root.py  test_run_script_compare_paths.py  test_script_execute.py  test_script_runner.py  test_session_context.py  test_smoke_database.py  test_smoke_init.py  test_smoke_instance.py  test_smoke_sync.py  test_smoke_venv.py  test_smoke_worktrees.py  test_venv_management.py  test_web_base_url.py  test_worktrees.py
