[project]
name = "re-owm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "addons_resolution",
    "adoption",
    "archive",
    "audit_log",
    "cli_commands",
    "config_schemas",
    "cwd_inference",
    "database_auth",
    "database_lifecycle",
    "error_taxonomy",
    "fetch_sync",
    "instance_lifecycle_create",
    "instance_lifecycle_start_stop",
    "log_rotation",
    "mcp_surface",
    "module_install",
    "owm_env",
    "port_assignment",
    "ports_gevent",
    "requirements_patching",
    "safety_invariants",
    "script_runner",
    "session_context",
    "venv_management",
    "workspace_init",
    "worktrees",
    "permanently_green: tests that were green before any implementation and must stay green throughout; see TODO comment for intended rework direction",
    "integration: requires external infrastructure (postgres); skip with -m 'not integration' in CI without postgres",
]
