[project]
name = "owm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "fastapi>=0.115",
    "psutil>=7.2.2",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "httpx>=0.28",
    "pytest>=9.0.3",
]

[project.scripts]
owm                 = "owm.cli:cli"
owm-dashboard       = "dashboard.server:main"
owm-dashboard-demo  = "dashboard.fixture_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owm", "dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "addons_resolution",
    "adoption",
    "archive",
    "audit_log",
    "cli_commands",
    "config_schemas",
    "cwd_inference",
    "dashboard",
    "database_auth",
    "database_lifecycle",
    "error_taxonomy",
    "fetch_sync",
    "instance_lifecycle_create",
    "instance_lifecycle_start_stop",
    "log_rotation",
    "mcp_surface",
    "module_install",
    "owm_env",
    "port_assignment",
    "ports_gevent",
    "requirements_patching",
    "safety_invariants",
    "script_runner",
    "session_context",
    "venv_management",
    "workspace_init",
    "worktrees",
    "permanently_green: tests that were green before any implementation and must stay green throughout; see TODO comment for intended rework direction",
    "integration: requires external infrastructure (postgres); skip with -m 'not integration' in CI without postgres",
    "smoke: real subprocess/filesystem calls, no mocks; slow but high-confidence wiring tests",
    "cli_integration: end-to-end CLI tests via Click CliRunner; exercises the full command→library→disk path",
]
